Fix spacing on index html, add 2 images

--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ color:#fe59c2;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent; */
   
-  color: black;
+  color: purple;
   padding-left: 10px;
     
 }
